# uncle_good_advice

./: Cargo.toml  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/advise/: mod.rs
src/cli/: mod.rs
src/mongostore/: mod.rs
src/newsdata_io/: connector.rs  extractor.rs  mod.rs  validator.rs
src/shared/: mod.rs
src/traits/: mod.rs
