[package]
name = "uncle_good_advice"
version = "0.1.0"
edition = "2021"
description = "Application with push and pull capabilites to analyze message using LLM's and other Deep Learning models."


[lib]
name = "uncle_good_advice_lib"
path = "src/lib.rs"

[[bin]]
name = "uncle"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.27", features = ["cargo", "derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
inquire = "0.7.5"
kalosm = { version = "0.3.2", features = ["language"] }
tokio = { version = "1.43.0", features = ["full"] }
